[gd_scene load_steps=9 format=3 uid="uid://bi2obwhnheih5"]

[ext_resource type="Script" uid="uid://dvgrofkscquim" path="res://Skript/lumberjack_hut_ui.gd" id="1_1b87s"]
[ext_resource type="Texture2D" uid="uid://5pkk82tqksqg" path="res://Sprites/LumberHutIcon.png" id="1_kx3v6"]
[ext_resource type="Texture2D" uid="uid://c4iruqrufowdy" path="res://Sprites/SproutTree.png" id="2_1b87s"]
[ext_resource type="Texture2D" uid="uid://dujgbe47e67rw" path="res://Sprites/Demolish.png" id="2_lgrqn"]
[ext_resource type="Texture2D" uid="uid://wiuogh6eskd5" path="res://Sprites/YoungTree.png" id="3_lgrqn"]
[ext_resource type="Texture2D" uid="uid://d23wqk4deitfx" path="res://Sprites/GrownTree.png" id="4_1o3rg"]
[ext_resource type="Texture2D" uid="uid://cecqbm8vepw5a" path="res://Sprites/StopWork.png" id="5_mfqom"]
[ext_resource type="Texture2D" uid="uid://cccowjj41srmu" path="res://Sprites/WorkArea.png" id="6_ojiui"]

[node name="Lumberjack hut_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1b87s")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 0.211806
anchor_bottom = 0.8
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DemolishBuilding" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("2_lgrqn")

[node name="CloseLumberHutUI" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
action_mode = 0
icon = ExtResource("5_mfqom")

[node name="LumberHutIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource("1_kx3v6")
stretch_mode = 3

[node name="PrioritySelect" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SproutButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PrioritySelect"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("2_1b87s")

[node name="YoungTreeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PrioritySelect"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_lgrqn")

[node name="GrownTreeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PrioritySelect"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_1o3rg")

[node name="WorkSettingsSelect" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StopWork" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/WorkSettingsSelect"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("5_mfqom")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/WorkSettingsSelect"]
layout_mode = 2
theme_override_constants/margin_left = 76

[node name="AssignWorkArea" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/WorkSettingsSelect/MarginContainer"]
layout_mode = 2
icon = ExtResource("6_ojiui")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/DemolishBuilding" to="." method="_on_demolish_building_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/CloseLumberHutUI" to="." method="_on_close_lumber_hut_ui_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/PrioritySelect/SproutButton" to="." method="_on_sprout_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/PrioritySelect/YoungTreeButton" to="." method="_on_young_tree_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/PrioritySelect/GrownTreeButton" to="." method="_on_grown_tree_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/WorkSettingsSelect/StopWork" to="." method="_on_stop_work_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/WorkSettingsSelect/MarginContainer/AssignWorkArea" to="." method="_on_assign_work_area_pressed"]
